--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <video controls="controls">
-        <source src="https://docs.google.com/u/0/uc?export=download&confirm=7O0x&id=1VaEFQAalkOpBBj6kRwZX0UzzC38g-aMe" type='video/mp4'/>
-    </video>
-    
+   
 </head>
 <body>
-    
+   <h1>
+    Nothing here, dont be curious lol
+   </h1>
 </body>
 </html>
