--- a/ePW48zvX/Gy8N4949.html
+++ b/ePW48zvX/Gy8N4949.html
@@ -4,5 +4,9 @@
 </head>
 <body>
     <iframe src="https://hqq.tv/e/T1FWQjVOVzVTbFZZM1g2NXBBVVJPUT09" height="450" width="720" webkitAllowFullScreen mozallowfullscreen allowfullscreen frameborder="0" scrolling="no"></iframe>    
+    <div></div>
+    <a href="https://ouo.io/SV1fh4">Watch on mega.nz if you can't watch above</a>
+    <div></div>
+    <a href="https://ouo.io/2zrlcX">Download on google drive if you can't watch above</a>
 </body>
 </html>
